--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-black text-white;
+    @apply bg-neutral-950 text-white;
   }
   * {
     scrollbar-width: 6px;
@@ -13,9 +13,9 @@
     @apply w-3;
   }
   ::-webkit-scrollbar-thumb {
-    @apply bg-gray-800 hover:bg-gray-700 rounded-full border-solid border-4 border-black;
+    @apply bg-gray-800 hover:bg-gray-700 rounded-full border-solid border-4 border-neutral-950;
   }
   ::-webkit-scrollbar-track {
-    @apply bg-black;
+    @apply bg-neutral-950;
   }
 }
